# Project_C

./: .gitignore  CMakeLists.txt  README.md  interruptAndTimer.c  package.json  platformio.ini  test.c  test2.c  기술서 - 이재윤.hwp
SqlQuery/: Washer.sql
doc/: doc.txt  git_branch.txt  기술서 - 이재윤.hwp  프로젝트_기술서_3조_박해준.hwp
lib/struct/: washingStruct.h
lib/uart0/: uart0.c
project/: CMakeLists.txt  createDBTable.sql
project/include/: database.h
project/src/: database.c  main.c
project/washer/: washer.c  washertable.sql
server/: app.js
server/css/: loginPage.css  signupPage.css
server/html/: idFind.html  index.html  loginPage.html  signupPage.html  wash.html  washDetail.html
server/js/: time.js
server/routes/: board.js  idFind.js  index.js  login.js  logout.js  pwFind.js  signup.js  update1.js  update3.js  update4.js  washDetail.js
server/template/: Info.js  literal.js
src/: gpt_test  interruptAndTimer.c  main.c  serial_test
test/: libserialToMysql.c  serial_to_mysql  testprogram  uarttest.c
washer/: CMakeLists.txt  washer.c  washer.sql
